--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -149,18 +149,15 @@ res <- dat %>%
   split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
   map_dfr(est_heterogen_smd_raw, .id = "effect") #apply function, rbind results into dataframe ('dfr'), make sure purrr is up to date
 
-#Transform effect sizes to raw correlations
-#'transform_MA' is a sourced function
-dat2 <- dat %>% 
+#Transform effect sizes to biserial correlations (pearson's correlations left as is)
+#estimate tau2 for correlations
+#'transform_MA' and 'summarizer' are sourced functions
+res2 <- dat %>% 
   split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
-  map_dfr(transform_MA, .id = "effect") #apply function and transform back from list to dataframe
-
-
-#estimate tau2 for tranformed biserial and pearson's correlations
-#'summarizer' is a sourced function
-res2 <- dat2 %>% 
-  split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
+  map(transform_MA) %>% #
   map_dfr(summarizer, .id = "effect")
+
+
 
 #NB! note that for low vs. high category scales, the I2 lower bound is zero, but after transformation
 #the tau2 lower bound is *not* zero. This is an indication of the problems with effect size tranformations.
