--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -1,7 +1,9 @@
 ---
 title: "Figures"
 author: "Heterogeneity in direct replications in psychology and its association with effect size"
-output: pdf_document
+output: 
+  pdf_document: 
+    latex_engine: xelatex
 ---
 
 ```{r setup, include=FALSE}
@@ -73,6 +75,7 @@ ggplot(dat3, aes(x = tau, y = I2, group = effect, color = effect_type)) +
 # ggsave("../figures/tau-I2.png", dpi = 600, height =  4 , width = 6.47)
 
 ```
+
 Figure 1. Result of simulation relating $I^2$-values to between studies standard deviation. Each line represent one of 37 effects. Tau is not directly comparable across effect size measures. 
 
 ##Figure 2
@@ -179,6 +182,7 @@ densities
 # save_plot("../figures/densities_het.png", densities,
 #            nrow = 2,  base_width = 7, base_aspect_ratio = 0.618, dpi = 600)
 ```
+
 Figure 2. Simulated $I^2$ (a) and $/tau^2$ (b) densities across 37 effects for zero, small, medium, and large heterogeneity according to the definitions of Higgins (2003), and a histogram of the observed I2 estimates for the 37 effects. For panel b) effects consist of correlations and biserial correlation and heterogeneity levels were approximated by Fisher’s z values corresponding to Higgins’ definitions for the median sample size of 108. Each simulated density consists of approximately 370,000 estimates. 
 
 ```{r transform_effect_and_compute_rma}
@@ -196,22 +200,22 @@ res <- dat %>%
 
 ```{r cor_het_effect_size, results = "hide", cache=TRUE}
 #Basic correlations
-cor.test(res2$I2, res2$r) #pearson I2
+cor.test(res$I2, res$r) #pearson I2
 
-I2_fit <- summary(lm(I2 ~ r, data = res2)) #for annotating figures
+I2_fit <- summary(lm(I2 ~ r, data = res)) #for annotating figures
 
-cor.test(res2$tau2, res2$r) #pearson tau2
+cor.test(res$tau2, res$r) #pearson tau2
 
-tau2_fit <- summary(lm(tau2 ~ r, data = res2))
+tau2_fit <- summary(lm(tau2 ~ r, data = res))
 
-cor.test(res2$H2, res2$r) #pearson H2
+cor.test(res$H2, res$r) #pearson H2
 
-H2_fit <- summary(lm(H2 ~ r, data = res2))
+H2_fit <- summary(lm(H2 ~ r, data = res))
 
-cor.test(res2$I2, res2$r, method = "spearman") #spearman
+cor.test(res$I2, res$r, method = "spearman") #spearman
 
 ##Excluding anchoring effects
-dropped_anchoring <- res2 %>%
+dropped_anchoring <- res %>%
   filter(!grepl("Anchoring", effect))
 
 cor.test(dropped_anchoring$I2, dropped_anchoring$r) #pearson
@@ -226,7 +230,7 @@ pear <- function(formula, data, indices){ #pearson
      return(fit$estimate)
 }
 
-bootfit <- boot(data=res2, statistic=pear, R=1000, formula= ~ r + I2)
+bootfit <- boot(data=res, statistic=pear, R=1000, formula= ~ r + I2)
 
 I2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca")) #percentile and adjusted percental method (BCa)
 
@@ -237,7 +241,7 @@ spear <- function(formula, data, indices){ #spearman
 }
 
 options(warn=-1)
-bootfit <- boot(data=res2, statistic=spear, R=1000, formula= ~ r + I2)
+bootfit <- boot(data=res, statistic=spear, R=1000, formula= ~ r + I2)
 options(warn=0)
 
 I2_ci_spear <- boot.ci(bootfit, type=c("perc", "bca"))
@@ -255,7 +259,7 @@ pear <- function(formula, data, indices){
      return(fit$estimate)
 }
 
-bootfit <- boot(data=res2, statistic=pear, R=1000, formula= ~ r + H2)
+bootfit <- boot(data=res, statistic=pear, R=1000, formula= ~ r + H2)
 
 H2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
 
@@ -267,7 +271,7 @@ H2_ci_pears <- boot.ci(bootfit, type=c("perc", "bca"))
 
 #Plots of H2 and I2 vs. biserial correlation r for all effects together, two above chunks need to be run first
 
-I2 <- ggplot(res2, aes(x = r, y = I2)) +
+I2 <- ggplot(res, aes(x = r, y = I2)) +
   geom_point(alpha = 0.5) +
   geom_smooth(method = "lm", se = TRUE, color = "black") +
   coord_cartesian(ylim = c(0, 100)) +
@@ -280,7 +284,7 @@ I2 <- ggplot(res2, aes(x = r, y = I2)) +
   scale_y_continuous(name = expression(paste(italic(I)^2," index"))) +
   scale_x_continuous(name = NULL)
 
-H2 <- ggplot(res2, aes(x = r, y = H2)) + 
+H2 <- ggplot(res, aes(x = r, y = H2)) + 
   geom_point(alpha = 0.5) +
   geom_smooth(method = "lm", se = TRUE, color = "black") +
   annotate("text", x = 0.14, y = Inf, vjust = 5, size = 3.5, fontface = "italic", label = paste("b = ", format(round(H2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(H2_fit$r.squared), 2), nsmall = 2))) +
@@ -292,7 +296,7 @@ H2 <- ggplot(res2, aes(x = r, y = H2)) +
   scale_y_continuous(name = expression(paste(italic(H)^2," index", sep = ""))) +
   scale_x_continuous(name = NULL)
 
-tau2 <- ggplot(res2, aes(x = r, y = tau2)) + 
+tau2 <- ggplot(res, aes(x = r, y = tau2)) + 
   geom_point(alpha = 0.5) +
   geom_smooth(method = "lm", se = TRUE, color = "black") +
   annotate("text", x = 0.14, y = Inf, vjust = 5, size = 3.5, fontface = "italic", label = paste("b = ", format(round(tau2_fit$coefficients[2, 1], 2), nsmall = 2), ", r = ", format(round(sqrt(tau2_fit$r.squared), 2), nsmall = 2))) +
@@ -309,6 +313,7 @@ effect_het
 
 
 ```
+
 Figure 3. The correlation between a) I2 ,and effect size and b) H2 and c)  τ ̂^2and effect size for 37 effects from ten pre-registered multi-lab replication projects. Shaded bands represent 95% confidence intervals
 
 ##Correlations per effect type (alternative figure 3, probably drop)
