--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -199,7 +199,8 @@ het <-  het %>%
   left_join(I2_power) %>% 
   arrange(desc(s_I2),  desc(s_ci.ub)) %>% #sort by tau2 and upper CI bound
   mutate(I2_ci = paste0("[", trimws(format(round(s_ci.lb, 2), nsmall = 2)), ", ", trimws(format(round(s_ci.ub, 2), nsmall = 2)), "]"), #Round and put confidence interval between brackets, e.g., [0, 0.41]
-         tau2_ci = paste0("[", trimws(format(round(tau2_ci.lb, 2), nsmall = 2)), ", ", trimws(format(round(tau2_ci.ub, 2), nsmall = 2)), "]")) %>% 
+         tau2_ci = paste0("[", trimws(format(round(tau2_ci.lb, 4), nsmall = 4)), ", ", trimws(format(round(tau2_ci.ub, 4), nsmall = 4)), "]"),
+         tau2 = format(round(tau2, 4), nsmall = 4)) %>% #rounded here instead of in table function because should have 4 digits
   select(rp, effect, k, effect_type, eff_size, s_I2, I2_ci, r, tau2, tau2_ci, zero, small, medium, large)
 
 ```
