--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -198,15 +198,16 @@ I2_power <- dens %>%
 het <-  het %>% 
   left_join(I2_power) %>% 
   arrange(desc(s_I2),  desc(s_ci.ub)) %>% #sort by tau2 and upper CI bound
-  mutate(I2_ci = paste0("[", trimws(format(round(s_ci.lb, 2), nsmall = 2)), ", ", trimws(format(round(s_ci.ub, 2), nsmall = 2)), "]"), #Round and put confidence interval between brackets, e.g., [0, 0.41]
-         tau_ci = paste0("[", trimws(format(round(tau_ci.lb, 4), nsmall = 4)), ", ", trimws(format(round(tau_ci.ub, 4), nsmall = 4)), "]"),
-         tau = format(round(tau, 4), nsmall = 4)) %>% #rounded here instead of in table function because should have 4 digits
+  mutate(I2_ci = paste0("[", trimws(format(round(s_ci.lb, 1), nsmall = 1)), ", ", trimws(format(round(s_ci.ub, 1), nsmall = 1)), "]"), #Round and put confidence interval between brackets, e.g., [0, 0.41]
+         s_I2 = format(round(s_I2, 1), nsmall = 1),
+         tau_ci = paste0("[", trimws(format(round(tau_ci.lb, 3), nsmall = 3)), ", ", trimws(format(round(tau_ci.ub, 3), nsmall = 3)), "]"),
+         tau = format(round(tau, 3), nsmall = 3)) %>% #rounded here instead of in table function because should have 4 digits
   select(rp, effect, k, effect_type, eff_size, s_I2, I2_ci, r, tau, tau_ci, zero, small, medium, large)
 
 ```
 
 
-```{r heterogeneity-table, cache = TRUE}
+```{r heterogeneity-table, cache = FALSE}
 #library(kableExtra)
 
 het %>% knitr::kable("latex", align = "c", booktabs = TRUE, escape = FALSE, digits = 2, col.names = c("RP", "Effect", "K", "Effect type", "Effect size estimate",  "$I^2$(\\%)", "$I^2$ 95\\% CI", "r*" , "$\\tau$", "$\\tau$ 95\\% CI", "Zero", "Small", "Medium", "Large")) %>% 
