--- a/code/tables.rmd
+++ b/code/tables.rmd
@@ -149,7 +149,11 @@ Note: "For studies with several effects the number of participants is the averag
 #Function 'est_heterogen_smd_raw' is sourced
 res <- dat %>% 
   split(.$effect) %>%  #separate by effect, necessary step otherwise the function is applied overall
-  map_dfr(est_heterogen_smd_raw, .id = "effect") #apply function, rbind results into dataframe ('dfr'), make sure purrr is up to date
+  map_dfr(est_heterogen_smd_raw, .id = "effect") %>% #apply function, rbind results into dataframe ('dfr'), make sure purrr is up to date
+  mutate(tau = sqrt(tau2),
+         tau_ci.lb = sqrt(tau2_ci.lb),
+         tau_ci.ub = sqrt(tau2_ci.ub)) %>% 
+  select(-tau2, - tau2_ci.lb, -tau2_ci.ub) #drop redundant variables
 
 #Transform effect sizes to biserial correlations (pearson's correlations left as is)
 #estimate tau2 for correlations
@@ -159,14 +163,11 @@ res2 <- dat %>%
   map(transform_MA) %>% #
   map_dfr(summarizer, .id = "effect")
 
-#NB! note that for low vs. high category scales, the I2 lower bound is zero, but after transformation
-#the tau2 lower bound is *not* zero. This is an indication of the problems with effect size tranformations.
-
 res <- res %>%
-  mutate(tau = sqrt(res2$tau2), #For table 3, report tau and transformed effect sizes (biserial correlations)
-         tau_ci.lb = sqrt(res2$tau2.lb),
-         tau_ci.ub = sqrt(res2$tau2.ub),
-         r = res2$r)
+  mutate(r = res2$r,
+         tau_r = sqrt(res2$tau2), #For table 3, report tau and transformed effect sizes (biserial correlations)
+         tau_r_ci.lb = sqrt(res2$tau2.lb),
+         tau_r_ci.ub = sqrt(res2$tau2.ub))
 
 #Add rp and k to the data-frame and prep for table
 het <- dat %>% 
@@ -176,7 +177,7 @@ het <- dat %>%
             k = n_distinct(Site)) %>% 
   left_join(res) %>% 
   mutate(effect_type = recode(effect_type, 
-                              d = "SMD.",
+                              d = "SMD",
                               'Raw mean difference' = "MD",
                               'Risk difference' = "RD")) %>% 
   ungroup()
@@ -197,12 +198,14 @@ I2_power <- dens %>%
 #Combine dataframes to create full table
 het <-  het %>% 
   left_join(I2_power) %>% 
-  arrange(desc(s_I2),  desc(s_ci.ub)) %>% #sort by tau2 and upper CI bound
+  arrange(desc(s_I2),  desc(s_ci.ub)) %>% #sort by I2 and upper CI bound
   mutate(I2_ci = paste0("[", trimws(format(round(s_ci.lb, 1), nsmall = 1)), ", ", trimws(format(round(s_ci.ub, 1), nsmall = 1)), "]"), #Round and put confidence interval between brackets, e.g., [0, 0.41]
          s_I2 = format(round(s_I2, 1), nsmall = 1),
          tau_ci = paste0("[", trimws(format(round(tau_ci.lb, 3), nsmall = 3)), ", ", trimws(format(round(tau_ci.ub, 3), nsmall = 3)), "]"),
-         tau = format(round(tau, 3), nsmall = 3)) %>% #rounded here instead of in table function because should have 4 digits
-  select(rp, effect, k, effect_type, eff_size, s_I2, I2_ci, r, tau, tau_ci, zero, small, medium, large)
+         tau = format(round(tau, 3), nsmall = 3),
+         tau_r = format(round(tau_r, 3), nsmall = 3),
+         tau_r_ci = paste0("[", trimws(format(round(tau_r_ci.lb, 3), nsmall = 3)), ", ", trimws(format(round(tau_r_ci.ub, 3), nsmall = 3)), "]")) %>% #rounded here instead of in table function because should have 4 digits
+  select(rp, effect, k, effect_type, eff_size, s_I2, I2_ci, tau, tau_ci, r, tau_r, tau_r_ci, zero, small, medium, large)
 
 ```
 
@@ -210,13 +213,13 @@ het <-  het %>%
 ```{r heterogeneity-table, cache = FALSE}
 #library(kableExtra)
 
-het %>% knitr::kable("latex", align = "c", booktabs = TRUE, escape = FALSE, digits = 2, col.names = c("RP", "Effect", "K", "Effect type", "Effect size estimate",  "$I^2$(\\%)", "$I^2$ 95\\% CI", "r*" , "$\\tau$", "$\\tau$ 95\\% CI", "Zero", "Small", "Medium", "Large")) %>% 
-  add_header_above(c(" " = 10, "Level of heterogeneity" = 4)) %>% 
-  add_header_above(c(" " = 10, "Type I Error Rate & Statistical Power" = 4)) %>% 
+het %>% knitr::kable("latex", align = "c", booktabs = TRUE, escape = FALSE, digits = 2, col.names = c("RP", "Effect", "K", "Effect type", "Effect size estimate",  "$I^2$(\\%)", "$I^2$ 95\\% CI", "$\\tau$", "$\\tau$ 95\\% CI", "r*" , "r* $\\tau$", "r* $\\tau$ 95\\% CI", "Zero", "Small", "Medium", "Large")) %>% 
+  add_header_above(c(" " = 12, "Level of heterogeneity" = 4)) %>% 
+  add_header_above(c(" " = 12, "Type I Error Rate & Statistical Power" = 4)) %>% 
   kable_styling("scale_down", font_size = 7) %>%
   column_spec(5, width = "5em") %>% #make sure the 'Effect size estimate' header is wrapped 
   footnote(threeparttable = TRUE, escape = FALSE,
-           general = "Effects were estimated in metafor using REML. The following effects are odds ratios transformed into standardized mean differences: 'Allowed vs. forbidden', 'Gain vs. loss framing', 'Norm of reciprocity', 'Low vs. high category scales'. RP = Replication Project, K = no. primary studies, CI = confidence intervals, r* = effect sizes as correlations and biserial correlations. $I^2$ and its confidence intervals are for original effect size specifications whereas $/tau^2$ and its confidence intervals are for transformed r* effect sizes. Statistical power and type I error rates were simulated, where Zero = simulated type 1 error, and the other headers represent simulated power under small/medium/large heterogeneity ($I^2$ = 25/50/75\\\\%) respectively. SMD = Standardized Mean difference (Hedge's g), MD = Mean Difference, RD = Risk Difference, r = correlation. Code to reproduce table: osf.io/kf6pt/",
+           general = "Effects were estimated in metafor using REML. The following effects are odds ratios transformed into standardized mean differences: 'Allowed vs. forbidden', 'Gain vs. loss framing', 'Norm of reciprocity', 'Low vs. high category scales'. RP = Replication Project, K = no. primary studies, CI = confidence intervals, r* = effect sizes as correlations and biserial correlations. $I^2$ and its confidence intervals are for original effect size specifications whereas $\tau$ and its confidence intervals are for transformed r* effect sizes. Statistical power and type I error rates were simulated, where Zero = simulated type 1 error, and the other headers represent simulated power under small/medium/large heterogeneity ($I^2$ = 25/50/75\\\\%) respectively. SMD = Standardized Mean difference (Hedge's g), MD = Mean Difference, RD = Risk Difference, r = correlation. Code to reproduce table: osf.io/kf6pt/",
            alphabet = "These effects were simulated as standardized mean differences") %>% 
   landscape()
 
