--- a/code/figures.rmd
+++ b/code/figures.rmd
@@ -335,36 +335,64 @@ tau2_per_type <- dat %>%
   split(.$effect) %>%  
   map_dfr(est_heterogen_smd_raw, .id = "effect")
 
+MD_fit <- function(x){
+    fit <- rma(measure = "SMD", m1i = outcome_t1, m2i = outcome_c1, sd1i = outcome_t2, sd2i = outcome_c2, n1i = ntreatment, n2i = ncontrol, data = x)
+    hetero <- confint(fit)$random[c(1, 3), ] 
+    data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
+             s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
+             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])
+}
+
+fisher_fit <- function(x){
+    fit <- rma(measure = "ZCOR", ri = effect_size, ni = Ntotal, data = x)
+    hetero <- confint(fit)$random[c(1, 3), ] 
+    data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
+             s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
+             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])
+    }
+
+#Raw mean differences to SMD
+MD_standardized <- dat %>% 
+  filter(effect_type == "Raw mean difference" & !outcomes1_2 == "mean _ SE") %>% #No method in metafor to compute SMD when standard deviations not given, so skip this study 
+  split(.$effect) %>% 
+  map_dfr(MD_fit, .id = "effect")
+
+fisher <- dat %>% 
+  filter(effect_type == "r") %>% 
+  split(.$effect) %>% 
+  map_dfr(fisher_fit, .id = "effect")
+
 #effects that were transformed from OR to SMD
 OR2d <- c('Allowed vs. forbidden', 'Gain vs. loss framing', #originally transformed to SMD
            'Norm of reciprocity', 'Low vs. high category scales') #refit as OR
 
-OR_fit <- function(x){ #fit rma to odds raios
-  fit <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, n1i = ntreatment, n2i = ncontrol,  data = x)
-  hetero <- confint(fit)$random[c(1, 3), ] 
-  data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
-             s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
-             tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])}
-
-fit_OR <- dat %>% 
-  filter(effect %in% OR2d) %>% 
-  split(.$effect) %>% 
-  map_dfr(OR_fit, .id = "effect")
+#If we don't use the Odds ratios we don't need the below
+# OR_fit <- function(x){ #fit rma to odds raios
+#   fit <- rma(measure = "OR", ai = outcome_t1, bi = outcome_t2, ci = outcome_c1, di = outcome_c2, n1i = ntreatment, n2i = ncontrol,  data = x)
+#   hetero <- confint(fit)$random[c(1, 3), ] 
+#   data.frame(eff_size = fit$b[[1]], #effect size (point estimate) 
+#              s_I2 = hetero[2, 1], s_ci.lb = hetero[2, 2], s_ci.ub = hetero[2, 3],
+#              tau2 = hetero[1, 1], tau2_ci.lb = hetero[1, 2], tau2_ci.ub = hetero[1, 3])}
+# 
+# fit_OR <- dat %>% 
+#   filter(effect %in% OR2d) %>% 
+#   split(.$effect) %>% 
+#   map_dfr(OR_fit, .id = "effect")
 
 
 tau2_per_type <- dat %>% #This is to add the effect_type names
   select(effect, effect_type) %>% 
   distinct() %>% 
   mutate(effect_type = recode(effect_type, 
-                              d = "Standardized Mean Difference",
-                              'Raw mean difference' = "Mean Difference",
-                              'Risk difference' = "Risk Difference",
-                              'r' = "Correlation")) %>% 
+                              d = "Standardized Mean Difference")) %>% 
   left_join(tau2_per_type) %>% 
-  filter(!effect %in% OR2d) %>% #drop old SMD converted OR
-  bind_rows(fit_OR) %>% #and instead add OR meta-analyzed as OR
-  mutate(effect_type = ifelse(is.na(effect_type), "Odds Ratio", effect_type),
-         eff_size = abs(eff_size)) #need the absolute values for plotting
+  filter(!effect %in% c(OR2d, MD_standardized$effect, fisher$effect)) %>% #drop old SMD converted OR, unstandardized MD and raw correlations
+  bind_rows(MD_standardized) %>% 
+  bind_rows(fisher) %>% 
+  mutate(effect_type = ifelse(effect %in% MD_standardized$effect, "Standardized Mean Difference", effect_type),
+         effect_type = ifelse(effect %in% fisher$effect, "Fisher's z", effect_type),
+         eff_size = abs(eff_size)) %>% #need the absolute values for plotting
+  filter(effect_type %in% c("Standardized Mean Difference", "Fisher's z"))
 
 
 fitter <- function(df){ #function to fit correlations for annotating facet plots
@@ -382,7 +410,7 @@ labels <- tau2_per_type %>%
     
 tau2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = tau2)) + 
   geom_point(alpha = 0.5) +
-  geom_line(stat = "smooth", method = "lm", se = FALSE, color = "black", alpha = .5, linetype = "dashed") + #to set alpha for the line geom_line must be used rather than geom_smooth
+  geom_smooth(method = "lm", se = TRUE, color = "black") + #to set alpha for the line geom_line must be used rather than geom_smooth
   geom_text(data = labels, aes(label = lab), x = -Inf, y = Inf, hjust = -0.1, vjust = 6, size = 3.5, fontface = "italic") + #hjust and vjust can be used to annotate the same position in all facets
   scale_y_continuous(name = expression(paste("Between studies variance ", italic(tau)^2))) +
   scale_x_continuous(name = "Effect size") +
@@ -391,7 +419,7 @@ tau2_facet <- ggplot(tau2_per_type, aes(x = eff_size, y = tau2)) +
         strip.text = element_text(size = 12),
         panel.border = element_rect(fill = NA, colour = "black", #add box around plots
                                     size = 0.5, linetype = "solid")) + 
-  facet_wrap(~effect_type, scales = "free") #use free scales since scales are different
+  facet_wrap(~effect_type, nrow = 2, scales = "free") #use free scales since scales are different
 
 tau2_facet
 # ggsave("../figures/tau2_facet.png", dpi = 600, height =  7, width = 7)
